--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LeadBuzz - Your Lead Generation Solution</title>
+    <meta name="google-site-verification" content="x3Wi_78lzOmWm9Vbr-7QseSdOPQTA52ZAMMeFQ5awXo" />
+    <title>LeadBuzz - Your Lead Generation Solution</title> 
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -29,7 +29,6 @@
                 <h2>Welcome to LeadBuzz</h2>
                 <p>Your premier lead generation solution</p>
                 <button id="cta-button">Get Started</button>
-                <p> Leadbuzz is your all-in-one sales & marketing system that combines the power of advanced technology with human touch.  your business can work for you 24/7!</p>
             </div>
 
             <div class="image-gallery">
@@ -135,7 +134,7 @@
                     <img src="Images/loan_3.jpeg" alt="Payday Loan Services">
                     <img src="Images/loan_4.jpeg" alt="Student Loan Services">
                     <img src="Images/loan_5.jpeg" alt="Personal Loans">
-                    <img src="Images/loan_7.jpeg" alt="Credit Cards">
+                    <img src="Images/loan_6.jpeg" alt="Credit Cards">
                 </div>
                 <p>
                     <b>
